containers/workflow/kustomize/base/n8n-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: n8n-app
    template: n8n-template
    component: worker
    role: api
    app: n8n
  name: n8n-worker
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n
      component: worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: n8n
        component: worker
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: n8n
              component: worker
      containers:
        - env:
            - name: NODES_EXCLUDE
              value: ""
            - name: DB_TYPE
              value: postgresdb
            - name: DB_POSTGRESDB_HOST
              value: postgresql-n8n
            - name: DB_POSTGRESDB_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: postgresql-n8n
            - name: DB_POSTGRESDB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: postgresql-n8n
            - name: DB_POSTGRESDB_DATABASE
              valueFrom:
                secretKeyRef:
                  key: database-name
                  name: postgresql-n8n
            - name: DB_POSTGRESDB_PORT
              value: "5432"
            - name: DB_POSTGRESDB_SCHEMA
              value: public
            - name: N8N_BASIC_AUTH_ACTIVE
              value: "true"
            - name: N8N_BASIC_AUTH_USER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: n8n
            - name: N8N_BASIC_AUTH_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: n8n
            - name: N8N_PORT
              value: "5678"
            - name: N8N_EMAIL_MODE
              value: smtp
            - name: N8N_SMTP_HOST
              value: apps.smtp.gov.bc.ca
            - name: N8N_SMTP_PORT
              value: "25"
            - name: N8N_SMTP_USER
              value: no-reply@gov.bc.ca
            - name: N8N_SMTP_PASS
              value: nopassword
            - name: N8N_SMTP_SENDER
              value: no-reply@gov.bc.ca
            - name: N8N_SMTP_SSL
              value: "false"
            - name: N8N_ENCRYPTION_KEY
              valueFrom:
                secretKeyRef:
                  key: encryption-key
                  name: n8n
            - name: N8N_DEFAULT_BINARY_DATA_MODE
              value: filesystem
            - name: N8N_METRICS
              value: "true"
            - name: QUEUE_BULL_REDIS_HOST
              value: redis-n8n
            - name: QUEUE_BULL_REDIS_PORT
              value: "6379"
            - name: QUEUE_BULL_REDIS_TIMEOUT_THRESHOLD
              value: "20"
            - name: QUEUE_RECOVERY_INTERVAL
              value: "10"
            - name: QUEUE_BULL_REDIS_DB
              value: "0"
            - name: QUEUE_BULL_REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: redis-n8n
            - name: GENERIC_TIMEZONE
              value: America/Vancouver
            - name: EXECUTIONS_PROCESS
              value: queue
            - name: EXECUTIONS_MODE
              value: queue
            - name: NODE_ENV
              value: production
            - name: N8N_USER_FOLDER
              value: /data/.n8n
            - name: N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS
              value: "false"
          image: image-registry.openshift-image-registry.svc:5000/bf5ef6-tools/n8n:latest
          imagePullPolicy: Always
          command:
            - n8n
          args:
            - worker
            - --concurrency=5
          name: n8n-worker
          resources:
            limits:
              cpu: "1"
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data
              name: n8n-data
            - mountPath: /backup
              name: n8n-backup
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
        - name: n8n-backup
          persistentVolumeClaim:
            claimName: n8n-backup
