containers/workflow/kustomize/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n
    app.kubernetes.io/component: n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/part-of: n8n-app
  name: n8n
spec:
  ports:
    - name: 5678-tcp
      port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    app: n8n
    component: main
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n-webhook
    app.kubernetes.io/component: n8n-webhook
    app.kubernetes.io/instance: n8n-webhook
    app.kubernetes.io/part-of: n8n-app
  name: n8n-webhook
spec:
  ports:
    - name: 5678-tcp
      port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    app: n8n
    component: webhook
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n-worker
    app.kubernetes.io/component: n8n-worker
    app.kubernetes.io/instance: n8n-worker
    app.kubernetes.io/part-of: n8n-app
  name: n8n-worker
spec:
  ports:
    - name: 5678-tcp
      port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    app: n8n
    component: worker
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n
    app.kubernetes.io/part-of: n8n-app
  name: postgresql-n8n
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgresql-n8n
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n
    app.kubernetes.io/part-of: n8n-app
  name: redis-n8n
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-n8n
  sessionAffinity: None
  type: ClusterIP
